Removed unnecessary header

--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
 </section>
 
 <section class="more">
-    <h3>What to expect</h3>
     <ul>
         <li><div class="icon food"></div><br>Food</li>
         <li><div class="icon drink"></div><br>Drinks</li>
@@ -244,7 +243,7 @@
     </tbody></table>
 </section>
 
-<section id="eventbrite">
+<section id="eventbrite" class="eventbrite">
     <!-- <a id="eventbrite"></a><h3 class="red">Night Market is sold out! Thank you for your interest in attending but unfortunately, we are now completely at capacity. Tickets will NOT be available at the door. We hope to see you at other TAP events in the future!</h3> -->
     <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com/tickets-external?eid=16460432597&ref=etckt" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Powered by Eventbrite</a></div></div>
 </section>
