--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header class="intro">
     <div class="inner">
-        <p class="label">TAP-NY Presents the 4th Annual<br>Night Market</p>
+        <p class="label">TAP-NY Presents the 4th Annual<br>Taiwanese Night Market</p>
         <div class="icon"></div>
         <a class="button" href="#eventbrite">Buy Tickets!</a>
     </div>
@@ -44,8 +44,7 @@
     <p>TAP invites you to our Fourth Annual Night Market - a delectable chance to savor and enjoy the culinary creations of some of NYC's top vendors. This year's night market will feature authentic Taiwanese dishes and more, and will recreate the wonderful bustle of Taiwan's night markets in our very own New York City.</p>
     <br>
     <h3>A One of a Kind Experience and Celebration</h3>
-    <p>All attendees will be treated to a dish from each of our hand-picked vendors. Try your hand at games reminiscent of those you'd find in night markets and arcades in Asia, take a swig of a Taiwanese drink or two, and mix and mingle with the crowd.</p>
-    <p>And don't forget - May is Asian Pacific American Heritage Month - close it out with a bang with TAP!</p>
+    <p>All attendees will be treated to a dish from each of our hand-picked vendors. Try your hand at games reminiscent of those you'd find in night markets and arcades in Asia, take a swig of a Taiwanese drink or two, and mix and mingle with the crowd. And don't forget - May is Asian Pacific American Heritage Month - close it out with a bang with TAP!</p>
     <br>
     <h3>We'll Have Savory, Sweet, and More to Wash It Down</h3>
     <br>
