--- a/index.html
+++ b/index.html
@@ -246,7 +246,16 @@
     <!-- <a id="eventbrite"></a><h3 class="red">Night Market is sold out! Thank you for your interest in attending but unfortunately, we are now completely at capacity. Tickets will NOT be available at the door. We hope to see you at other TAP events in the future!</h3> -->
     <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com/tickets-external?eid=16460432597&ref=etckt" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Powered by Eventbrite</a></div></div>
 </section>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-21439639-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
