Added parallax and fixed vendor icons

--- a/index.html
+++ b/index.html
@@ -50,77 +50,91 @@
     <br>
     <ul>
         <li>
-            <div class="logo square">
-                <a href="https://twitter.com/Apouspotsticker">
-                <img src="./img/vendors/a-pou.jpg" width="100px" height="100px">
+            <div class="logo square hide">
+                <a>
+                    <img src="./img/vendors/a-pou.jpg">
                 </a>
             </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>A-Pou Dumplings</strong>
-            </a>
+            <div>
+                <a>
+                    <strong>Han Dynasty</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a>
+                    <img src="./img/vendors/a-pou.jpg">
+                </a>
+            </div>
+            <div>
+                <a>
+                    <strong>CBao Eastern</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a>
+                    <img src="./img/vendors/a-pou.jpg">
+                </a>
+            </div>
+            <div>
+                <a>
+                    <strong>Outerborough</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo rectangle">
+                <a>
+                    <img src="./img/vendors/tkettle.jpg">
+                </a>
+            </div>
+            <div>
+                <a>
+                    <strong>TKettle</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a>
+                    <img src="./img/vendors/a-pou.jpg">
+                </a>
+            </div>
+            <div>
+                <a>
+                    <strong>Mira Izakaya</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a>
+                    <img src="./img/vendors/a-pou.jpg">
+                </a>
+            </div>
+            <div>
+                <a>
+                    <strong>Lululosophy</strong>
+                </a>
+            </div>
         </li>
         <li>
             <div class="logo square">
                 <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/han-dynasty.jpg" width="100px" height="100px">
+                    <img src="./img/vendors/a-pou.jpg">
                 </a>
             </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>Han Dynasty</strong>
-            </a>
-        </li>
-        <li>
-            <div class="logo square">
+            <div>
                 <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/ah-pou.jpg" width="100px" height="100px">
+                    <strong>A-Pou Dumplings</strong>
                 </a>
             </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>CBao Eastern</strong>
-            </a>
-        </li>
-        <li>
-            <div class="logo square">
-                <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/ah-pou.jpg" width="100px" height="100px">
-                </a>
-            </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>Outerborough</strong>
-            </a>
-        </li>
-        <li>
-            <div class="logo square">
-                <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/tkettle.jpg" width="100px" height="100px">
-                </a>
-            </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>TKettle</strong>
-            </a>
-        </li>
-        <li>
-            <div class="logo square">
-                <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/ah-pou.jpg" width="100px" height="100px">
-                </a>
-            </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>Mira Izakaya</strong>
-            </a>
-        </li>
-        <li>
-            <div class="logo square">
-                <a href="https://twitter.com/Apouspotsticker">
-                <img src="img/vendors/ah-pou.jpg" width="100px" height="100px">
-                </a>
-            </div>
-            <a href="https://twitter.com/Apouspotsticker"><br>
-                <strong>Lulu</strong>
-            </a>
         </li>
     </ul>
-    <p style="text-align:center">Also: Taiken Chicken, Taiwan Beer, Tiger Beer, And More!</p>
+    <p style="text-align:center">Plus: Taiwanese sausage, shaved ice, Taiwan Beer, Tiger Beer, and More!</p>
     <br>
     <div class="center">
         <a class="button" href="#eventbrite">Buy Tickets!</a>
@@ -140,6 +154,9 @@
         <div class="grid7"></div>
         <div class="grid8"></div>
         <div class="grid9"></div>
+        <div class="grid10"></div>
+        <div class="grid11"></div>
+        <div class="grid12"></div>
     </section>
 </section>
 
