Updated url to last year's Facebook album

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </section>
 
 <section class="photos">
-    <a href="https://www.facebook.com/media/set/?set=a.515654288498434.1073741832.123997660997434&amp;type=3" target="_blank">See more from last year's event</a>
+    <a href="https://www.facebook.com/media/set/?set=a.690863527644175.1073741846.123997660997434&type=3" target="_blank">See more from last year's event</a>
 
     <section class="photos-grid">
         <div class="grid1"></div>
