--- a/index.html
+++ b/index.html
@@ -50,86 +50,110 @@
     <br>
     <ul>
         <li>
-            <div class="logo square hide">
-                <a>
-                    <img src="./img/vendors/a-pou.jpg">
+            <div class="logo square">
+                <a href="http://www.cbaoasianbuns.com/">
+                    <img src="./img/vendors/cbao.png">
                 </a>
             </div>
             <div>
-                <a>
-                    <strong>Han Dynasty</strong>
-                </a>
-            </div>
-        </li>
-        <li>
-            <div class="logo square hide">
-                <a>
-                    <img src="./img/vendors/a-pou.jpg">
-                </a>
-            </div>
-            <div>
-                <a>
+                <a href="http://www.cbaoasianbuns.com/">
                     <strong>CBao Eastern</strong>
                 </a>
             </div>
         </li>
         <li>
-            <div class="logo square hide">
-                <a>
-                    <img src="./img/vendors/a-pou.jpg">
+            <div class="logo rectangle">
+                <a href="https://twitter.com/outerborough">
+                    <img src="./img/vendors/outerborough.png">
                 </a>
             </div>
             <div>
-                <a>
+                <a href="https://twitter.com/outerborough">
                     <strong>Outerborough</strong>
                 </a>
             </div>
         </li>
         <li>
             <div class="logo rectangle">
-                <a>
-                    <img src="./img/vendors/tkettle.jpg">
+                <a href="http://www.yelp.com/biz/tkettle-new-york">
+                    <img src="./img/vendors/tkettle.png">
                 </a>
             </div>
             <div>
-                <a>
+                <a href="http://www.yelp.com/biz/tkettle-new-york">
                     <strong>TKettle</strong>
-                </a>
-            </div>
-        </li>
-        <li>
-            <div class="logo square hide">
-                <a>
-                    <img src="./img/vendors/a-pou.jpg">
-                </a>
-            </div>
-            <div>
-                <a>
-                    <strong>Mira Izakaya</strong>
-                </a>
-            </div>
-        </li>
-        <li>
-            <div class="logo square hide">
-                <a>
-                    <img src="./img/vendors/a-pou.jpg">
-                </a>
-            </div>
-            <div>
-                <a>
-                    <strong>Lululosophy</strong>
                 </a>
             </div>
         </li>
         <li>
             <div class="logo square">
                 <a href="https://twitter.com/Apouspotsticker">
-                    <img src="./img/vendors/a-pou.jpg">
+                    <img src="./img/vendors/a-pou.png">
                 </a>
             </div>
             <div>
                 <a href="https://twitter.com/Apouspotsticker">
                     <strong>A-Pou Dumplings</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square">
+                <a href="http://www.woolysnyc.com/">
+                    <img src="./img/vendors/woolys.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://www.woolysnyc.com/">
+                    <strong>Wooly's</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo rectangle">
+                <a href="http://www.oddfellowsnyc.com/">
+                    <img src="./img/vendors/oddfellows.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://www.oddfellowsnyc.com/">
+                    <strong>OddFellows</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a href="http://www.mirasushi.com/">
+                    <img src="./img/vendors/a-pou.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://www.mirasushi.com/">
+                    <strong>Mira Izakaya</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a href="http://handynasty.net/nyc/">
+                    <img src="./img/vendors/a-pou.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://handynasty.net/nyc/">
+                    <strong>Han Dynasty</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo square hide">
+                <a href="http://www.lululosophy.com/">
+                    <img src="./img/vendors/a-pou.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://www.lululosophy.com/">
+                    <strong>Lululosophy</strong>
                 </a>
             </div>
         </li>
