Added OddFellows discount

--- a/index.html
+++ b/index.html
@@ -275,6 +275,20 @@
     <!-- <a id="eventbrite"></a><h3 class="red">Night Market is sold out! Thank you for your interest in attending but unfortunately, we are now completely at capacity. Tickets will NOT be available at the door. We hope to see you at other TAP events in the future!</h3> -->
     <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com/tickets-external?eid=16460432597&ref=etckt" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Powered by Eventbrite</a></div></div>
 </section>
+
+<section class="thanks">
+    <div class="columns">
+        <div class="column center">
+            <a href="http://www.oddfellowsnyc.com/">
+                <img src="./img/vendors/oddfellows.png">
+            </a>
+            <p>
+                In special partnership with <a href="http://www.oddfellowsnyc.com/"><strong>OddFellows Ice Cream Co</strong></a>, located just around the corner from the Villain at 175 Kent Ave, stop by all day on 5/29 (store hours are 1-11pm) and say you are with <strong>"TAP-NY"</strong> for a 10% discount on all in-store purchases of OddFellows treats! Enjoy a scoop of deliciously unique ice cream, with inventive flavors such as miso cherry and extra virgin olive oil, on us!
+            </p>
+        </div>
+    </div>
+</section>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
