--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>TAP-NY Night Market 2015</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:100,300|Montserrat:700" rel="stylesheet" type="text/css">
 </head>
