Added more vendor logos

--- a/index.html
+++ b/index.html
@@ -111,14 +111,26 @@
             </div>
         </li>
         <li>
-            <div class="logo square hide">
+            <div class="logo square">
                 <a href="http://www.mirasushi.com/">
-                    <img src="./img/vendors/a-pou.png">
+                    <img src="./img/vendors/miraizakaya.png">
                 </a>
             </div>
             <div>
                 <a href="http://www.mirasushi.com/">
                     <strong>Mira Izakaya</strong>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="logo rectangle">
+                <a href="http://www.lululosophy.com/">
+                    <img src="./img/vendors/lululosophy.png">
+                </a>
+            </div>
+            <div>
+                <a href="http://www.lululosophy.com/">
+                    <strong>Lululosophy</strong>
                 </a>
             </div>
         </li>
@@ -131,18 +143,6 @@
             <div>
                 <a href="http://handynasty.net/nyc/">
                     <strong>Han Dynasty</strong>
-                </a>
-            </div>
-        </li>
-        <li>
-            <div class="logo square hide">
-                <a href="http://www.lululosophy.com/">
-                    <img src="./img/vendors/a-pou.png">
-                </a>
-            </div>
-            <div>
-                <a href="http://www.lululosophy.com/">
-                    <strong>Lululosophy</strong>
                 </a>
             </div>
         </li>
