--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </li>
     </ul>
-    <p style="text-align:center">Plus: Taiwanese sausage, shaved ice, Taiwan Beer, Tiger Beer, and More!</p>
+    <p style="text-align:center">Plus: Taiwanese sausage, Taiwan Beer, Tiger Beer, and More!</p>
     <br>
     <div class="center">
         <a class="button" href="#eventbrite">Buy Tickets!</a>
