Added more vendor logos

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             </div>
         </li>
         <li>
-            <div class="logo square hide">
+            <div class="logo square">
                 <a href="http://handynasty.net/nyc/">
-                    <img src="./img/vendors/a-pou.png">
+                    <img src="./img/vendors/handynasty.png">
                 </a>
             </div>
             <div>
