Updated vendor logos

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
         </li>
         <li>
-            <div class="logo rectangle">
+            <div class="logo square">
                 <a href="http://www.lululosophy.com/">
                     <img src="./img/vendors/lululosophy.png">
                 </a>
@@ -148,6 +148,28 @@
         </li>
     </ul>
     <p style="text-align:center">Plus: Taiwanese sausage, Taiwan Beer, Tiger Beer, and More!</p>
+    <ul>
+        <li>
+            <div class="logo rectangle">
+                <a>
+                    <img src="./img/vendors/taiwanbeer.png">
+                </a>
+            </div>
+            <div>
+                <strong></strong>
+            </div>
+        </li>
+        <li>
+            <div class="logo rectangle">
+                <a>
+                    <img src="./img/vendors/tigerbeer.png">
+                </a>
+            </div>
+            <div>
+                <strong></strong>
+            </div>
+        </li>
+    </ul>
     <br>
     <div class="center">
         <a class="button" href="#eventbrite">Buy Tickets!</a>
