ticket clearer copy

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     <h3>The Food, The Bustle, The Fun</h3>
     <p>TAP invites you to our Fourth Annual Night Market - a delectable chance to savor and enjoy the culinary creations of some of NYC's top vendors. This year's night market will feature authentic Taiwanese dishes and more, and will recreate the wonderful bustle of Taiwan's night markets in our very own New York City.</p>
     <br>
-    <h3>A One of a Kind Experience and Celebration</h3>
-    <p>All attendees will be treated to a dish from each of our hand-picked vendors. Try your hand at games reminiscent of those you'd find in night markets and arcades in Asia, take a swig of a Taiwanese drink or two, and mix and mingle with the crowd. This year, we will also be featuring local NYC vendors that will be selling unique crafts for you to admire and take home. And don't forget - May is Asian Pacific American Heritage Month - close it out with a bang with TAP!</p>
+    <h3>What's Included With a Ticket?</h3>
+    <p>One ticket guarantees you one dish from each of our delectable hand picked vendors, access to our games, photobooth, and snacks. Plus, additional food and drink will be available for purchase throughout the night.</p>
+    <p>
+    Enjoy savory and sweet, try your hand at games reminiscent of those you'd find in night markets and arcades in Asia, take a swig of a Taiwanese drink or two, and mix and mingle with the crowd. This year, we will also be featuring local NYC vendors that will be selling unique crafts for you to admire and take home. And don't forget - May is Asian Pacific American Heritage Month - close it out with a bang with TAP!
+    </p>
     <br>
     <h3>We'll Have Savory, Sweet, and More to Wash It Down</h3>
     <br>
